--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>qunlix - {{ page.title }}</title>
+    <title>Richard Huang - {{ page.title }}</title>
     <meta name="author" content="Richard Huang" />
     <meta name="google-site-verification" content="KDVRO6hdZ0Vww31dac2Yomyd7xjmMMFEZw2Fzq5acuY" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/screen.css">
@@ -15,7 +15,7 @@
     <div id="header" class="section">
       <div class="wrapper">
         <strong id="blog-title">
-          <a href="/" rel="home">qunlix's blog</a>
+          <a href="/" rel="home">Richard Huang's Website</a>
         </strong>
         <p id="blog-description"></p>
         <div id="navigation">
@@ -42,7 +42,7 @@
           <div id="carrington-about" class="widget">
             <div class="about">
               <h2 class="widget-title">About</h2>
-              <p>qunlix's blog.</p>
+              <p>My name is Richard Huang, a Rubyist and open source advocate.</p>
               <a class="more" href="/about.html">more →</a>
             </div>
           </div>
