--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>qunlix - {{ page.title }}</title>
+    <title>qunliX - {{ page.title }}</title>
     <meta name="author" content="Richard Huang" />
     <meta name="google-site-verification" content="KDVRO6hdZ0Vww31dac2Yomyd7xjmMMFEZw2Fzq5acuY" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/screen.css">
@@ -15,13 +15,15 @@
     <div id="header" class="section">
       <div class="wrapper">
         <strong id="blog-title">
-          <a href="/" rel="home">qunlix's Blog</a>
+          <a href="/" rel="home">qunliX's Blog</a>
         </strong>
         <p id="blog-description"></p>
         <div id="navigation">
           <ul class="nav clearfix">
             <li class="first-child"><a href="/blog.html">Blog</a></li>
+			<!--
             <li><a href="/projects.html">Projects</a></li>
+			-->
             <li><a href="/about.html">About</a></li>
           </ul>
         </div>
@@ -42,7 +44,7 @@
           <div id="carrington-about" class="widget">
             <div class="about">
               <h2 class="widget-title">About</h2>
-              <p>qunlix.</p>
+              <p>qunliX.</p>
               <a class="more" href="/about.html">more →</a>
             </div>
           </div>
