--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,9 @@
     <meta name="author" content="Richard Huang" />
     <meta name="google-site-verification" content="KDVRO6hdZ0Vww31dac2Yomyd7xjmMMFEZw2Fzq5acuY" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/screen.css">
+	<!--
     <link href="http://feeds.feedburner.com/richard-huang" rel="alternate" title="RSS" type="application/rss+xml" />
+	-->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="/javascripts/jquery.github_v2.js"></script>
   </head>
@@ -15,7 +17,7 @@
     <div id="header" class="section">
       <div class="wrapper">
         <strong id="blog-title">
-          <a href="/" rel="home">qunliX's Blog</a>
+          <a href="/" rel="home">qunlix</a>
         </strong>
         <p id="blog-description"></p>
         <div id="navigation">
@@ -35,19 +37,22 @@
           {{ content }}
         </div>
         <div id="sidebar">
+		<!--
           <div id="carrington-subscribe" class="widget">
             <h2 class="widget-title">Subscribe</h2>
             <a class="feed alignright" title="RSS 2.0 feed for posts" rel="alternate" href="http://feeds.feedburner.com/richard-huang">
               <img src="/images/rss-button.gif" alt="latest posts" title="latest posts">
             </a>
           </div>
+		  -->
           <div id="carrington-about" class="widget">
             <div class="about">
               <h2 class="widget-title">About</h2>
-              <p>qunliX.</p>
+              <p>qunlix.</p>
               <a class="more" href="/about.html">more →</a>
             </div>
           </div>
+		  <!--
           <div id="carrington-speaker" class="widget">
             <a href="http://rubykaigi.org/2011/en/schedule/details/17S04" target="_blank">
               <img src="/images/rubykaigi2011.png" alt="speaker at rubykaigi2011">
@@ -56,6 +61,7 @@
               <img src="/images/railsconf2012.png" alt="speaker at railsconf2012" title="to be added">
             </a>
           </div>
+		  -->
           <div id="primary-sidebar">
             <div class="widget">
               <h2 class="widget-title">Categories</h2>
