--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>qunliX - {{ page.title }}</title>
-    <meta name="author" content="Richard Huang" />
+    <meta name="author" content="qunlix" />
     <meta name="google-site-verification" content="KDVRO6hdZ0Vww31dac2Yomyd7xjmMMFEZw2Fzq5acuY" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/screen.css">
 	<!--
@@ -110,7 +110,7 @@
       <div id="developer-link">
       </div>
     </div>
-    <a href="http://github.com/flyerhzm"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://assets2.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf?repo=&url=http%3A%2F%2Fs3.amazonaws.com%2Fgithub%2Fribbons%2Fforkme_right_red_aa0000.png&path=" alt="Fork me on GitHub"></a>
+    <!--<a href="http://github.com/flyerhzm"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://assets2.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf?repo=&url=http%3A%2F%2Fs3.amazonaws.com%2Fgithub%2Fribbons%2Fforkme_right_red_aa0000.png&path=" alt="Fork me on GitHub"></a>-->
     <script type="text/javascript">
       var disqus_shortname = 'richard-huang';
 
