--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>qunliX - {{ page.title }}</title>
+    <title>qunlix - {{ page.title }}</title>
     <meta name="author" content="qunlix" />
     <meta name="google-site-verification" content="KDVRO6hdZ0Vww31dac2Yomyd7xjmMMFEZw2Fzq5acuY" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/screen.css">
@@ -22,11 +22,11 @@
         <p id="blog-description"></p>
         <div id="navigation">
           <ul class="nav clearfix">
-            <li class="first-child"><a href="/blog.html">Blog</a></li>
+            <li class="first-child"><a href="/blog.html">博客</a></li>
 			<!--
             <li><a href="/projects.html">Projects</a></li>
 			-->
-            <li><a href="/about.html">About</a></li>
+            <li><a href="/about.html">关于</a></li>
           </ul>
         </div>
       </div>
@@ -121,6 +121,7 @@
         (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
       }());
     </script>
+	<!--
     <script type="text/javascript">
       var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
       document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -131,5 +132,6 @@
         pageTracker._trackPageview();
       } catch(err) {}
     </script>
+	-->
   </body>
 </html>
