--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -57,7 +57,7 @@ address {
 body {
 	background: #fff;
 	color: #51555c;
-	font: 12px/18px helvetica, arial, sans-serif;
+	font: 12px/18px Î¢ÈíÑÅºÚ helvetica, arial, sans-serif;
 }
 code {
 	font-family: "Lucida Console", Monaco, monospace;
