--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -57,7 +57,7 @@ address {
 body {
 	background: #fff;
 	color: #51555c;
-	font: 12px/18px Î¢ÈíÑÅºÚ;
+	font: 12px/18px \5FAE\8F6F\96C5\9ED1;
 }
 code {
 	font-family: "Lucida Console", Monaco, monospace;
