--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -468,7 +468,7 @@ h1.page-title {
 #header a,
 #header a:visited {
 	color: #fff;
-	front:16px Î¢ÈíÑÅºÚ;
+	front:16px;
 }
 #header #blog-title {
 	font-family: "Avenir Light", "Futura Light", helvetica, arial, sans-serif;
