--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,7 @@ layout: default
 <script type="text/javascript">
   var disqus_shortname = 'qunlix';
 
-  var disqus_url = "http://www.huangzhimin.com{{page.url}}";
+  var disqus_url = "http://blog.qunlix.com{{page.url}}";
 
   (function() {
             var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
