--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <meta charset="utf-8">
     <title>qunlix - {{ page.title }}</title>
     <meta name="author" content="qunlix" />
     <meta name="google-site-verification" content="KDVRO6hdZ0Vww31dac2Yomyd7xjmMMFEZw2Fzq5acuY" />
@@ -22,11 +22,11 @@
         <p id="blog-description"></p>
         <div id="navigation">
           <ul class="nav clearfix">
-            <li class="first-child"><a href="/blog.html">博客</a></li>
+            <li class="first-child"><a href="/blog.html">Blog</a></li>
 			<!--
             <li><a href="/projects.html">Projects</a></li>
 			-->
-            <li><a href="/about.html">关于</a></li>
+            <li><a href="/about.html">About</a></li>
           </ul>
         </div>
       </div>
