--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,10 @@
 <html>
   <head>
 
-    <title>qunlix - {{ page.title }}</title>
+    <title>qunlix  {{ page.title }}</title>
     <meta name="author" content="qunlix" />
-    <meta name="google-site-verification" content="KDVRO6hdZ0Vww31dac2Yomyd7xjmMMFEZw2Fzq5acuY" />
+<!--
     <link rel="stylesheet" type="text/css" href="/stylesheets/screen.css">
-	<!--
     <link href="http://feeds.feedburner.com/richard-huang" rel="alternate" title="RSS" type="application/rss+xml" />
 	-->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -49,7 +48,7 @@
             <div class="about">
               <h2 class="widget-title">About</h2>
               <p>qunlix.</p>
-              <a class="more" href="/about.html">more →</a>
+              <a class="more" href="/about.html">more</a>
             </div>
           </div>
 		  <!--
