--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,9 @@
 
     <title>qunlix  {{ page.title }}</title>
     <meta name="author" content="qunlix" />
-<!--
     <link rel="stylesheet" type="text/css" href="/stylesheets/screen.css">
+	<!--
+	<meta name="google-site-verification" content="KDVRO6hdZ0Vww31dac2Yomyd7xjmMMFEZw2Fzq5acuY" />
     <link href="http://feeds.feedburner.com/richard-huang" rel="alternate" title="RSS" type="application/rss+xml" />
 	-->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
